code: added google map with cluster markers

--- a/interests.html
+++ b/interests.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Rosie</title>
+    <title>Rosies's Intrests</title>
 </head>
 
 <body>
@@ -192,6 +192,18 @@
             </div>
         </div>
     </footer>
+    
+
+
+
+
+    <!-- //var apiKey = "AIzaSyA41tB10uAcTbrTYfoj6IH1V9xiriqWeqw"; -->
+
+    <script
+    src="https://unpkg.com/@googlemaps/markerclusterer/dist/index.min.js">
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCmn0S_8RCr5P1den__utTM42VQ4hixZnM&callback=initMap" async defer></script>
+    <script src="assets/js/map.js"></script>
 </body>
 
 </html>
