--- a/interests.html
+++ b/interests.html
@@ -192,17 +192,11 @@
             </div>
         </div>
     </footer>
-    
-
-
-
-
-    <!-- //var apiKey = "AIzaSyA41tB10uAcTbrTYfoj6IH1V9xiriqWeqw"; -->
 
     <script
     src="https://unpkg.com/@googlemaps/markerclusterer/dist/index.min.js">
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCmn0S_8RCr5P1den__utTM42VQ4hixZnM&callback=initMap" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=API_KEY&callback=initMap" async defer></script>
     <script src="assets/js/map.js"></script>
 </body>
 
