--- a/github.html
+++ b/github.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/github-styles.css">
+    
     <title>Rosie</title>
 </head>
 <body>
@@ -51,15 +52,17 @@
     </header>
     <section class="container-fluid">
         <div class="row bg-color-contact">
-            <div>
+            <div class="col-md-4">
                 <h3 class="contact-heading uppercase text-center">View My GitHub Projects:</h3>
                 <h5 class="uppercase text-center">(or change the username to search for other user profiles)</h5>
-            </div>
-
-            <div class="center-form">
                 <input type="text" id="gh-username" value="octocat" oninput="fetchGitHubInformation()">
+            </div>
+            <div class="col-md-8">
+            <div class="gh-center-form">
+                
                 <div id="gh-user-data" class="clearfix"></div>
                 <div id="gh-repo-data" class="clearfix"></div>
+            </div>
             </div>
         </div>
     </section>
